fix timer size on mobile

--- a/app/sass/_workout.scss
+++ b/app/sass/_workout.scss
@@ -4,7 +4,7 @@
   max-width: 500px;
   margin: 0 auto;
   font-family: 'Droid Sans Mono', Monaco, monospace;
-  font-size: $gigantic * 1.618;
+  font-size: 10rem;
   text-align: center;
   padding: 3rem 0 1rem 0;
 }
